--- a/setup/computer.html
+++ b/setup/computer.html
@@ -47,17 +47,36 @@
 		<img src="computer.png" alt="">
 		<div class="specs">
 			<ul>
-				<li>Processor: <a href="#">Intel Core i7 12700K</a></li>
-				<li>Cooler: <a href="#">Enermax LIQMAX III 240 RGB</a></li>
-				<li>Motherboard: <a href="#">Asus Prime H670-Plus D4</a></li>
-				<li>Memory: <a href="#">GeIL ORION RGB AMD Edition 32GB</a></li>
-				<li>GPU1: <a href="#">Asus DUAL EVO OC GeForce RTX 2060</a></li>
-				<li>GPU2: <a href="#">Asus Phoenix OC GeForce GTX 1660</a></li>
-				<li>Power Supply: <a href="#">Corsair RM850</a></li>
-				<li>Boot Drive: <a href="#">1TB WD_BLACK SN770 NVMe SSD</a></li>
+				<li>Processor: <a
+						href="https://www.intel.com/content/www/us/en/products/sku/134594/intel-core-i712700k-processor-25m-cache-up-to-5-00-ghz/specifications.html">Intel
+						Core i7 12700K</a></li>
+				<li>Cooler: <a
+						href="https://www.enermax.com/en/products/liqmax-iii-rgb-series-240mm-cpu-liquid-cooler">Enermax
+						LIQMAX III 240 RGB</a></li>
+				<li>Motherboard: <a
+						href="https://www.asus.com/us/motherboards-components/motherboards/prime/prime-h670-plus-d4/where-to-buy/">Asus
+						Prime H670-Plus D4</a></li>
+				<li>Memory: <a
+						href="https://www.amazon.com/GeIL-Compatible-Immersive-Multimedia-Streaming/dp/B08T93BKB5">GeIL
+						ORION RGB AMD Edition 32GB</a></li>
+				<li>GPU1: <a
+						href="https://www.asus.com/us/motherboards-components/graphics-cards/dual/dual-rtx2060-6g-evo/where-to-buy/">Asus
+						Dual EVO OC GeForce RTX 2060 6GB</a></li>
+				<li>GPU2: <a
+						href="https://www.asus.com/us/motherboards-components/graphics-cards/phoenix/ph-gtx1660-o6g/where-to-buy/">Asus
+						Phoenix OC GeForce GTX 1660 6GB</a></li>
+				<li>Power Supply: <a
+						href="https://www.corsair.com/us/en/p/psu/cp-9020196-na/rm-series-rm850-850-watt-80-plus-gold-certified-fully-modular-psu-cp-9020196-na">Corsair
+						RM850</a></li>
+				<li>Boot Drive: <a
+						href="https://www.westerndigital.com/products/internal-drives/wd-black-sn770-nvme-ssd#WDS100T3X0E">1TB
+						WD_BLACK SN770 NVMe SSD</a></li>
 				<li>Storage Drive: <a href="#">640GB 2.5" SATA Hard Drive (Unknown brand)</a></li>
-				<li>External Drive: <a href="#">5TB Seagate OneTouch USB Hard Drive</a></li>
-				<li>Case: <a href="#">DIYPC DIY-Mesh-W Black / White Steel</a></li>
+				<li>External Drive: <a
+						href="https://www.amazon.com/Seagate-One-Touch-External-Drive/dp/B08GQJFFC2?th=1">5TB Seagate
+						One Touch USB Hard Drive</a></li>
+				<li>Case: <a href="https://www.newegg.com/p/N82E16811353212">DIYPC DIY-Mesh-W Black / White Steel</a>
+				</li>
 			</ul>
 		</div>
 	</div>
