--- a/setup/index.html
+++ b/setup/index.html
@@ -62,19 +62,26 @@
 		<div class="peripherals">
 			<h2>Computer Peripherals</h2>
 			<ul>
-				<li>Keyboard: <a href="#">ROCCAT Horde AIMO</a></li>
-				<li>Mouse: <a href="#">ROCCAT Kain 122 AIMO</a></li>
-				<li>Monitor: <a href="#">VIZIO 4K HDR 43" M43Q6-J04</a></li>
+				<li>Keyboard: <a
+						href="https://www.amazon.com/ROCCAT-Horde-AIMO-Membranical-Keyboard/dp/B0798BBM8P">ROCCAT Horde
+						AIMO</a></li>
+				<li>Mouse: <a href="https://www.amazon.com/Kain-122-Aimo-Gaming-Mouse/dp/B07SVNQ54V">ROCCAT Kain 122
+						AIMO</a></li>
+				<li>Monitor: <a href="https://www.vizio.com/en/tv/m-series/M43Q6-J04">VIZIO 4K HDR 43" M43Q6-J04</a>
+				</li>
 			</ul>
 		</div>
 		<div class="software">
 			<h2>Software I Use</h2>
 			<ul>
-				<li>Recording Program: <a href="#">Open Broadcaster Software</a></li>
-				<li>Operating System: <a href="#">Windows 10 Home Edition</a></li>
-				<li>Video Editor: <a href="#">Adobe Premiere Pro 2023</a></li>
-				<li>Thumbnail Editor: <a href="#">Adobe Photoshop 2023</a></li>
-				<li>Audio Editor: <a href="#">Ableton Live 11 Standard</a></li>
+				<li>Recording Program: <a href="https://obsproject.com">Open Broadcaster Software</a></li>
+				<li>Operating System: <a href="https://www.microsoft.com/en-us/software-download/windows10">Windows 10
+						Home Edition</a></li>
+				<li>Video Editor: <a href="https://www.adobe.com/products/premiere.html">Adobe Premiere Pro 2023</a>
+				</li>
+				<li>Thumbnail Editor: <a href="https://www.adobe.com/products/photoshop.html">Adobe Photoshop 2023</a>
+				</li>
+				<li>Audio Editor: <a href="https://www.ableton.com/en/shop/live/">Ableton Live 11 Standard</a></li>
 			</ul>
 		</div>
 	</div>
