--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>SidGames5's Website</title>
-	<link rel="stylesheet" href="style.css" />
-	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="script.js"></script>
+
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="./script.js"></script>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -46,7 +48,8 @@
 			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation=1">YouTube</a>. Make
 				sure to subcribe! I post tutorials,
 				gaming, unboxing asmr (if i ever get a package), and random stuff.</p>
-			<div class="latest-video container align-center">
+			<h2>Latest 10 videos</h2>
+			<div class="latest-video align-center">
 				<!-- embed the latest video from youtube.com/c/sidgames5 -->
 				<iframe class="latestVideoEmbed" vnum='0' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
 					frameborder="0" allowfullscreen></iframe>
@@ -55,6 +58,32 @@
 				<iframe class="latestVideoEmbed" vnum='2' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
 					frameborder="0" allowfullscreen></iframe>
 				<iframe class="latestVideoEmbed" vnum='3' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+
+				<script src="ytembed.js"></script>
+			</div>
+			<div class="latest-video align-center">
+				<!-- embed the latest video from youtube.com/c/sidgames5 -->
+				<iframe class="latestVideoEmbed" vnum='4' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='5' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='6' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='7' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+
+				<script src="ytembed.js"></script>
+			</div>
+			<div class="latest-video align-center">
+				<!-- embed the latest video from youtube.com/c/sidgames5 -->
+				<iframe class="latestVideoEmbed" vnum='8' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='9' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='10' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='11' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
 					frameborder="0" allowfullscreen></iframe>
 
 				<script src="ytembed.js"></script>
