--- a/index.html
+++ b/index.html
@@ -51,40 +51,40 @@
 			<h2>Latest 10 videos</h2>
 			<div class="latest-video align-center">
 				<!-- embed the latest video from youtube.com/c/sidgames5 -->
-				<iframe class="latestVideoEmbed" vnum='0' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='1' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='2' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='3' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='0' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='1' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='2' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='3' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
 
 				<script src="ytembed.js"></script>
 			</div>
 			<div class="latest-video align-center">
 				<!-- embed the latest video from youtube.com/c/sidgames5 -->
-				<iframe class="latestVideoEmbed" vnum='4' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='5' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='6' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='7' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='4' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='5' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='6' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='7' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
 
 				<script src="ytembed.js"></script>
 			</div>
 			<div class="latest-video align-center">
 				<!-- embed the latest video from youtube.com/c/sidgames5 -->
-				<iframe class="latestVideoEmbed" vnum='8' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='9' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='10' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='11' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
-					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='8' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='9' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='10' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='11' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
+					height="180" frameborder="0" allowfullscreen></iframe>
 
 				<script src="ytembed.js"></script>
 			</div>
