--- a/404.html
+++ b/404.html
@@ -6,10 +6,14 @@
 	<meta charset="utf-8" />
 	<title>404 page not found!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="author" content="" />
-	<link rel="stylesheet" href="https://sidgames5.github.io/style.css" />
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="script.js"></script>
+
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="./script.js"></script>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
