--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 			<h1>hello there</h1>
 			<p>I am SidGames and I am a minecraft modder and game developer. If this link works that
 				means I bought the domain: <a href="https://sidgames.dev">sidgames.dev</a>.</p>
+			<!-- <div class="featured">
+
+			</div><br> -->
 			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation=1">YouTube</a>. Make
 				sure to subcribe! I post tutorials,
 				gaming, unboxing asmr (if i ever get a package), and random stuff.</p>
