--- a/setup/computer.html
+++ b/setup/computer.html
@@ -43,21 +43,19 @@
 		</div><br>
 	</div>
 	<div class="content">
-		<h1>Computer</h1>
-		<img src="computer.png" alt="">
+		<h1>Desktop</h1>
+		<img src="desktop.png" alt="">
 		<div class="specs">
 			<ul>
 				<li>Processor: <a
 						href="https://www.intel.com/content/www/us/en/products/sku/134594/intel-core-i712700k-processor-25m-cache-up-to-5-00-ghz/specifications.html">Intel
 						Core i7 12700K</a></li>
-				<li>Cooler: <a
-						href="https://www.enermax.com/en/products/liqmax-iii-rgb-series-240mm-cpu-liquid-cooler">Enermax
+				<li>Cooler: <a href="https://www.enermax.com/en/products/liqmax-iii-rgb-series-240mm-cpu-liquid-cooler">Enermax
 						LIQMAX III 240 RGB</a></li>
 				<li>Motherboard: <a
 						href="https://www.asus.com/us/motherboards-components/motherboards/prime/prime-h670-plus-d4/where-to-buy/">Asus
 						Prime H670-Plus D4</a></li>
-				<li>Memory: <a
-						href="https://www.amazon.com/GeIL-Compatible-Immersive-Multimedia-Streaming/dp/B08T93BKB5">GeIL
+				<li>Memory: <a href="https://www.amazon.com/GeIL-Compatible-Immersive-Multimedia-Streaming/dp/B08T93BKB5">GeIL
 						ORION RGB AMD Edition 32GB</a></li>
 				<li>GPU1: <a
 						href="https://www.asus.com/us/motherboards-components/graphics-cards/dual/dual-rtx2060-6g-evo/where-to-buy/">Asus
@@ -72,11 +70,24 @@
 						href="https://www.westerndigital.com/products/internal-drives/wd-black-sn770-nvme-ssd#WDS100T3X0E">1TB
 						WD_BLACK SN770 NVMe SSD</a></li>
 				<li>Storage Drive: <a href="#">640GB 2.5" SATA Hard Drive (Unknown brand)</a></li>
-				<li>External Drive: <a
-						href="https://www.amazon.com/Seagate-One-Touch-External-Drive/dp/B08GQJFFC2?th=1">5TB Seagate
+				<li>External Drive: <a href="https://www.amazon.com/Seagate-One-Touch-External-Drive/dp/B08GQJFFC2?th=1">5TB
+						Seagate
 						One Touch USB Hard Drive</a></li>
 				<li>Case: <a href="https://www.newegg.com/p/N82E16811353212">DIYPC DIY-Mesh-W Black / White Steel</a>
 				</li>
+			</ul>
+		</div>
+
+		<h1>Laptop</h1>
+		<img src="laptop.png" alt="">
+		<div class="specs">
+			<ul>
+				<li>System: <a href="http://">ORIGIN PC NS-17 v2</a></li>
+				<li>Display: 17.3" QHD 240hz</li>
+				<li>Processor: Intel Core i9 13900HX</li>
+				<li>GPU: NVIDIA GeForce RTX 4080M</li>
+				<li>Memory: Corsair Vengeance 16GB Kit (2x8GB) DDR5 4800MHz SODIMM</li>
+				<li>Boot Drive: Corsair MP600 CORE XT 1TB</li>
 			</ul>
 		</div>
 	</div>
