--- a/setup/computer.html
+++ b/setup/computer.html
@@ -82,7 +82,7 @@
 		<img src="laptop.png" alt="">
 		<div class="specs">
 			<ul>
-				<li>System: <a href="http://">ORIGIN PC NS-17 v2</a></li>
+				<li>System: <a href="https://www.originpc.com/configurator/ns-17-v2/">ORIGIN PC NS-17 v2</a></li>
 				<li>Display: 17.3" QHD 240hz</li>
 				<li>Processor: Intel Core i9 13900HX</li>
 				<li>GPU: NVIDIA GeForce RTX 4080M</li>
