--- a/linktree/index.html
+++ b/linktree/index.html
@@ -33,6 +33,15 @@
 					</div>
 				</div>
 			</div>
+			<div class="social">
+				<h2>SOCIAL MEDIA</h2>
+				<div class="lbox">
+					<div class="link">
+						<button onclick="goto('sm.mastodon');">Mastodon</button>
+						<span>random posts</span>
+					</div>
+				</div>
+			</div>
 			<div class="setup">
 				<h2>SETUP</h2>
 				<div class="lbox">
