--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 	<link rel="stylesheet" href="./style.css" />
+
+	<a rel="me" href="https://mastodon.social/@sidgames5" style="display: none;">Mastodon</a>
 </head>
 
 <body>
