--- a/index.html
+++ b/index.html
@@ -1,100 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>SidGames5's Website</title>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>SidGames5's Website</title>
+		<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="./script.js"></script>
 
-	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="./script.js"></script>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+		<link rel="stylesheet" href="./style.css" />
 
-	<link rel="stylesheet" href="./style.css" />
+		<a
+			rel="me"
+			href="https://mastodon.social/@sidgames5"
+			style="display: none"
+			>Mastodon</a
+		>
+	</head>
 
-	<a rel="me" href="https://mastodon.social/@sidgames5" style="display: none;">Mastodon</a>
-</head>
-
-<body>
-	<div class="container">
-		<div class="header">
-			<div class="navbar navbar-expand-sm bg-dark">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="#">SidGames5</a>
+	<body>
+		<div class="container">
+			<div class="header">
+				<div class="navbar navbar-expand-sm bg-dark">
+					<div class="container-fluid">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="#">SidGames5</a>
+						</div>
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a href="#" class="nav-link">Home</a>
+							</li>
+							<li class="nav-item">
+								<a href="about/" class="nav-link">About</a>
+							</li>
+							<li class="nav-item">
+								<a href="projects/" class="nav-link"
+									>Projects</a
+								>
+							</li>
+							<li class="nav-item">
+								<a href="contact/" class="nav-link">Contact</a>
+							</li>
+						</ul>
 					</div>
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a href="#" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="about/" class="nav-link">About</a>
-						</li>
-						<li class="nav-item">
-							<a href="projects/" class="nav-link">Projects</a>
-						</li>
-						<li class="nav-item">
-							<a href="contact/" class="nav-link">Contact</a>
-						</li>
-					</ul>
 				</div>
 			</div>
-		</div><br>
-		<div class="content">
-			<h1>hello there</h1>
-			<p>I am SidGames and I am a minecraft modder and game developer. If this link works that
-				means I bought the domain: <a href="https://sidgames.dev">sidgames.dev</a>.</p>
-			<!-- <div class="featured">
+			<br />
+			<div class="content">
+				<h1>hello there</h1>
+				<p>
+					I am SidGames and I am a minecraft modder and game
+					developer. If this link works that means I bought the
+					domain: <a href="https://sidgames.dev">sidgames.dev</a>.
+				</p>
+				<!-- <div class="featured">
 
 			</div><br> -->
-			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation=1">YouTube</a>. Make
-				sure to subcribe! I post tutorials,
-				gaming, unboxing asmr (if i ever get a package), and random stuff.</p>
-			<h2>Latest 10 videos</h2>
-			<div class="latest-video align-center">
-				<!-- embed the latest video from youtube.com/c/sidgames5 -->
-				<iframe class="latestVideoEmbed" vnum='0' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='1' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='2' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='3' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
+				<p>
+					I am a content creator on
+					<a href="https://youtube.com/c/sidgames5?sub_confirmation=1"
+						>YouTube</a
+					>. Make sure to subcribe! I post tutorials, gaming, unboxing
+					asmr (if i ever get a package), and random stuff.
+				</p>
+				<h2>latest videos</h2>
+				<div class="latest-video align-center">
+					<table>
+						<tr>
+							<th>SidGames5</th>
+							<th>SidGames6</th>
+							<th>Sid Talks Linux</th>
+						</tr>
+						<tr>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="0"
+									cid="UCotVsD7JWzhYKSp3AsVsr5g"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="0"
+									cid="UCObW-7NPYsd2zW5mSJRIVJA"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="0"
+									cid="UC6xFdy2fbj4a_PKEfFXcI5Q"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="1"
+									cid="UCotVsD7JWzhYKSp3AsVsr5g"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="1"
+									cid="UCObW-7NPYsd2zW5mSJRIVJA"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="1"
+									cid="UC6xFdy2fbj4a_PKEfFXcI5Q"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="2"
+									cid="UCotVsD7JWzhYKSp3AsVsr5g"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="2"
+									cid="UCObW-7NPYsd2zW5mSJRIVJA"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="2"
+									cid="UC6xFdy2fbj4a_PKEfFXcI5Q"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="3"
+									cid="UCotVsD7JWzhYKSp3AsVsr5g"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="3"
+									cid="UCObW-7NPYsd2zW5mSJRIVJA"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+							<td>
+								<iframe
+									class="latestVideoEmbed"
+									vnum="3"
+									cid="UC6xFdy2fbj4a_PKEfFXcI5Q"
+									autoplay="false"
+									width="320"
+									height="180"
+									frameborder="0"
+									allowfullscreen
+								></iframe>
+							</td>
+						</tr>
+					</table>
 
-				<script src="ytembed.js"></script>
-			</div>
-			<div class="latest-video align-center">
-				<!-- embed the latest video from youtube.com/c/sidgames5 -->
-				<iframe class="latestVideoEmbed" vnum='4' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='5' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='6' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='7' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-
-				<script src="ytembed.js"></script>
-			</div>
-			<div class="latest-video align-center">
-				<!-- embed the latest video from youtube.com/c/sidgames5 -->
-				<iframe class="latestVideoEmbed" vnum='8' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='9' cid="UCotVsD7JWzhYKSp3AsVsr5g" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='0' cid="UCObW-7NPYsd2zW5mSJRIVJA" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-				<iframe class="latestVideoEmbed" vnum='1' cid="UCObW-7NPYsd2zW5mSJRIVJA" autoplay="false" width="320"
-					height="180" frameborder="0" allowfullscreen></iframe>
-
-				<script src="ytembed.js"></script>
+					<script src="ytembed.js"></script>
+				</div>
 			</div>
 		</div>
-	</div>
-</body>
-
+	</body>
 </html>
