--- a/setup/index.html
+++ b/setup/index.html
@@ -75,7 +75,7 @@
 			<h2>Software I Use</h2>
 			<ul>
 				<li>Recording Program: <a href="https://obsproject.com">Open Broadcaster Software</a></li>
-				<li>Operating System: <a href="https://www.microsoft.com/en-us/software-download/windows10">Desktop: Windows 10 Home</a> & <a href="https://manjaro.org/download/">Manjaro Linux XFCE</a>, <a href="https://www.microsoft.com/en-us/software-download/windows11">Laptop: Windows 11 Pro N</a></li>
+				<li>Operating System: <a href="https://archlinux.org/download/">Desktop: Arch Linux</a>, <a href="https://www.microsoft.com/en-us/software-download/windows11">Laptop: Windows 11 Pro N</a></li>
 				<li>Video Editor: <a href="https://www.adobe.com/products/premiere.html">Adobe Premiere Pro 2023</a>
 				</li>
 				<li>Thumbnail Editor: <a href="https://www.adobe.com/products/photoshop.html">Adobe Photoshop 2023</a>
