--- a/linktree/index.html
+++ b/linktree/index.html
@@ -31,6 +31,10 @@
 						<button onclick="goto('ch.youtube2');">SidGames6</button>
 						<span>vlogs, behind the scenes, random videos</span>
 					</div>
+					<div class="link">
+						<button onclick="goto('ch.youtube3');">Sid Talks Linux</button>
+						<span>linux, virtual machines, coding</span>
+					</div>
 				</div>
 			</div>
 			<div class="social">
